# wisp-science

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/release-notes/: v0.1.0.md  v0.2.0.md
.github/workflows/: build-macos.yml  build-windows.yml  release-windows.yml  test.yml
crates/wisp-cli/: Cargo.toml
crates/wisp-cli/src/: main.rs
crates/wisp-core/: Cargo.toml
crates/wisp-core/src/: agent.rs  context.rs  lib.rs  memory.rs  output.rs  system_prompt.rs
crates/wisp-llm/: Cargo.toml
crates/wisp-llm/src/: anthropic.rs  lib.rs  message.rs  openai.rs  provider.rs  routed.rs
crates/wisp-mcp/: Cargo.toml
crates/wisp-mcp/examples/: smoke.rs
crates/wisp-mcp/src/: client.rs  lib.rs  tool.rs
crates/wisp-paths/: Cargo.toml
crates/wisp-paths/src/: lib.rs
crates/wisp-python/: Cargo.toml
crates/wisp-python/src/: env.rs  kernel.rs  lib.rs  tool.rs
crates/wisp-skills/: Cargo.toml
crates/wisp-skills/src/: index.rs  lib.rs  tool.rs
crates/wisp-store/: Cargo.toml
crates/wisp-store/migrations/: 0000_init.sql
crates/wisp-store/src/: lib.rs  secrets.rs
crates/wisp-tools/: Cargo.toml
crates/wisp-tools/src/: attempt_completion.rs  edit.rs  env.rs  grep.rs  image.rs  lib.rs  read.rs  safety.rs  search.rs  shell.rs  tool.rs  write.rs
mcp-servers/bio-tools/: run_server.py
mcp-servers/ketcher-chemistry/: server.js
python/: kernel_worker.py  mock_mcp_server.py  requirements-mcp.txt
seed/: manifest_crispr_screen.json  manifest_enzyme_engineering.json  manifest_extremophile.json  manifest_immunotherapy.json
skills/: THIRD_PARTY_LICENSES.md
skills/alphafold2/: SKILL.md
skills/boltz/: SKILL.md
skills/borzoi/: SKILL.md
skills/chai1/: SKILL.md
skills/compute-env-setup/: SKILL.md
skills/compute-env-setup/references/: envs_reference.md
skills/customize/: SKILL.md
skills/diffdock/: SKILL.md
skills/diffdock/references/: workflows.md
skills/esmfold2/: SKILL.md
skills/esmfold2/references/: design-hook.md  esmc.md
skills/evo2/: SKILL.md
skills/fair-esm2/: SKILL.md
skills/figure-composer/: SKILL.md  kernel.py
skills/figure-style/: SKILL.md  kernel.py
skills/indication-dossier/: SKILL.md
skills/indication-dossier/references/: 00-research-standards.md  01-meta-initialization.md  02-epidemiology-research.md  03-biology-soc-research.md  04-regulatory-trials-research.md  05-synthesis.md  06-writing-style.md  waypoint-schemas.md
skills/ligandmpnn/: SKILL.md
skills/literature-review/: SKILL.md  kernel.py
skills/local-env-setup/: SKILL.md
skills/managed-model-endpoints/: SKILL.md
skills/openfold3/: SKILL.md
skills/paper-narrative/: SKILL.md  kernel.py
skills/pdf-explore/: SKILL.md  kernel.py
skills/product-self-knowledge/: SKILL.md
skills/proteinmpnn/: SKILL.md
skills/remote-compute-modal/: SKILL.md  env-setup.md  provider.json  provider.py
skills/remote-compute-modal/envs/: chemistry_gpu.py  esmfold2_gpu.py  genomics_evo2_gpu.py  proteomics_boltz_gpu.py  proteomics_gpu.py  proteomics_jax_gpu.py  proteomics_openfold_gpu.py  proteomics_rfd_diffdock_gpu.py  singlecell_gpu.py
skills/remote-compute-ssh/: SKILL.md
skills/scgpt/: SKILL.md
skills/scvi-tools/: SKILL.md  kernel.py
skills/self-awareness/: SKILL.md
skills/skill-creator/: SKILL.md
skills/skill-creator/agents/: analyzer.md
skills/skill-creator/eval-viewer/: viewer.html
skills/skill-creator/references/: schemas.md
skills/skill-creator/scripts/: aggregate_benchmark.py  package_skill.py  quick_validate.py
skills/solublempnn/: SKILL.md
skills/using-model-endpoint/: SKILL.md  provider.json  provider.py
src-tauri/: Cargo.toml  gen-icons.ps1  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  seed.rs
ui/: Cargo.toml  build.ps1  index.html  styles.css  sync-vendor.ps1
ui-tests/: package-lock.json  package.json  playwright.config.ts
ui-tests/tests/: mock-tauri.ts  ui.spec.ts
ui/src/: api.js  context_menu.js  context_menu.rs  i18n.rs  main.rs
(+338 files in other folders)
