[package]
name = "wisp-tauri"
description = "Tauri v2 desktop shell for wisp-science: commands + agent event stream."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wisp-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = "5"
regex = { workspace = true }
base64 = "0.22"
wisp-core = { workspace = true }
wisp-llm = { workspace = true }
wisp-skills = { workspace = true }
wisp-store = { workspace = true }
wisp-python = { workspace = true }
wisp-mcp = { workspace = true }
wisp-paths = { workspace = true }
wisp-tools = { workspace = true }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
