[package]
name = "wisp-store"
description = "SQLite persistence for Wisp (sessions, artifacts, settings, API keys)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
keyring = { workspace = true }
wisp-llm = { workspace = true }
