[package]
name = "wisp-tools"
description = "Built-in agent tools (read/write/edit/search/grep/shell/attempt_completion) with Windows-aware safety and path sandbox."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
anyhow = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }
similar = { workspace = true }
dunce = { workspace = true }
base64 = "0.22"
wisp-llm = { workspace = true }
